objects/Passenger__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Food_Preference__c</fullName>
        <label>Food Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Sandwich</fullName>
                </value>
                <value>
                    <fullName>Soft Drinks</fullName>
                </value>
                <value>
                    <fullName>Tea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Passenger</label>
    <nameField>
        <label>Passenger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passengers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>